* doc/extend.texi (ARC Built-in Functions): Use deftypefn for 	built-ins. 	* doc/invoke.texi (Option Summary): Remove -margonaut, 	-mbig-endian, -mEB, -mlittle-endian, -mEL. Change -mEA to -mea and 	-multcost to -mmultcost. 	(ARC Options): Mark -margonaut, -mbig-endian, -mEB, 	-mlittle-endian, -mEL, -mEA and -multcost as 	deprecated. Consistent description of ARC v2 EM architecture 	throughout. Use -mcpu=ARCv2EM to specify ARC v2 EM architecture 	with -mARCv2EM and -mEM as aliases. Provided -mea as replacement 	for -mEA and -mmultcost as replacements for -multcost. -mmul32x16 	not for ARC v2 EM, -mmul64 for ARC600 only. -msimd for ARC700 	only. -mlra marked as experimental. -mtune match CPU names of 	-mcpu and mark lower case alternatives as deprecated. Remove 	-mdev_rem and -mcode_density from deprecated.
Conflicts:
	gcc/ChangeLog.ARC
	gcc/doc/extend.texi
	gcc/doc/invoke.texi

--- a/gcc/doc/invoke.texi
+++ b/gcc/doc/invoke.texi
@@ -490,10 +490,10 @@ Objective-C and Objective-C++ Dialects}.
 -msplit-vecmove-early -m1reg-@var{reg}}
 
 @emph{ARC Options}
-@gccoptlist{-margonaut -mbarrel-shifter -mbig-endian -EB -mlittle-endian @gol
--EL -mcpu=@var{cpu} -mA6 -mARC600 -mA7 -mARC700 @gol
+@gccoptlist{-mbarrel-shifter @gol
+-mcpu=@var{cpu} -mA6 -mARC600 -mA7 -mARC700 @gol
 -mdpfp -mdpfp-compact -mdpfp-fast -mno-dpfp-lrsr @gol
--mEA -mno-mpy -mmul32x16 -mmul64 @gol
+-mea -mno-mpy -mmul32x16 -mmul64 @gol
 -mnorm -mspfp -mspfp-compact -mspfp-fast -msimd -msoft-float -mswap @gol
 -mcrc -mdsp-packa -mdvbf -mlock -mmac-d16 -mmac-24 -mrtsc -mswape @gol
 -mtelephony -mxy -misize -mannotate-align -marclinux -marclinux_prof @gol
@@ -504,7 +504,7 @@ Objective-C and Objective-C++ Dialects}.
 -mexpand-adddi -mindexed-loads -mlra -mlra-priority-none @gol
 -mlra-priority-compact mlra-priority-noncompact -mno-millicode @gol
 -mmixed-code -mq-class -mRcq -mRcw -msize-level=@var{level} @gol
--mtune=@var{cpu} -multcost=@var{num} -munalign-prob-threshold=@var{probability}}
+-mtune=@var{cpu} -mmultcost=@var{num} -munalign-prob-threshold=@var{probability}}
 
 @emph{ARM Options}
 @gccoptlist{-mapcs-frame  -mno-apcs-frame @gol
@@ -11332,39 +11332,16 @@ purpose.  The default is @option{-m1reg-none}.
 @subsection ARC Options
 @cindex ARC options
 
-A range of @samp{-m} options are defined for Synopsys DesignWare ARC.
 The following options control the architecture variant for which code
 is being compiled:
 
 @c architecture variants
 @table @gcctabopt
 
-@item -margonaut
-@opindex margonaut
-FPX: Enable Argonaut ARC CPU Double Precision Floating Point extensions.
-
 @item -mbarrel-shifter
 @opindex mbarrel-shifter
 Generate instructions supported by barrel shifter.  This is the default
 unless @samp{-mcpu=ARC601} is in effect.
-
-@item -mbig-endian
-@opindex mbig-endian
-@item -EB
-@opindex EB
-Compile code for big endian targets.  Use of these options is now
-discouraged.  Users wanting big-endian code, should use the
-@emph{arceb-} targets when building the tool chain, for which
-big-endian is the default.
-
-@item -mlittle-endian
-@opindex mlittle-endian
-@item -EL
-@opindex EL
-Compile code for little endian targets.  Use of these options is now
-discouraged.  Users wanting little-endian code should use the
-@emph{arc-} targets when building the tool chain, for which
-little-endian is the default.
 
 @item -mcpu=@var{cpu}
 @opindex mcpu
@@ -11391,7 +11368,7 @@ This is the default when configured with @samp{--with-cpu=arc700}@.
 
 @item -mdpfp
 @opindex mdpfp
-@item -mdpfp-compact
+@itemx -mdpfp-compact
 @opindex mdpfp-compact
 FPX: Generate Double Precision FPX instructions, tuned for the compact
 implementation.
@@ -11405,17 +11382,11 @@ implementation.
 @opindex mno-dpfp-lrsr
 Disable LR and SR instructions from using FPX extension aux registers.
 
-@item -mEA
-@opindex mEA
+@item -mea
+@opindex mea
 Generate Extended arithmetic instructions.  Currently only
 @code{divaw}, @code{adds}, @code{subs}, and @code{sat16} are
 supported.  This is always enabled for @samp{-mcpu=ARC700}.
-
-@item -mforce-short
-@opindex mforce-short
-Force short suffix by ignoring the instruction length attribute. This
-is the default when GCC is configured using @samp{--with-cpu=EM}, but
-otherwise is off by default.
 
 @item -mno-mpy
 @opindex mno-mpy
@@ -11427,8 +11398,7 @@ Generate 32x16 bit multiply and mac instructions.
 
 @item -mmul64
 @opindex mmul64
-Generate mul64 and mulu64 instructions.  This is not valid for
-@samp{-mcpu=ARC700}.
+Generate mul64 and mulu64 instructions.  Only valid for @samp{-mcpu=ARC600}.
 
 @item -mnorm
 @opindex mnorm
@@ -11437,7 +11407,7 @@ is in effect.
 
 @item -mspfp
 @opindex mspfp
-@item -mspfp-compact
+@itemx -mspfp-compact
 @opindex mspfp-compact
 FPX: Generate Single Precision FPX instructions, tuned for the compact
 implementation.
@@ -11449,7 +11419,8 @@ implementation.
 
 @item -msimd
 @opindex msimd
-Enable generation of ARC SIMD instructions via target-specific builtins.
+Enable generation of ARC SIMD instructions via target-specific
+builtins.  Only valid for @samp{-mcpu=ARC700}.
 
 @item -msoft-float
 @opindex msoft-float
@@ -11568,7 +11539,8 @@ Disable generation of call frame information for epilogues.
 
 @item -mlong-calls
 @opindex mlong-calls
-Generate call insns as register indirect calls.
+Generate call insns as register indirect calls, thus providing access
+to the full 32-bit address range.
 
 @item -mmedium-calls
 @opindex mmedium-calls
@@ -11634,7 +11606,7 @@ Disable ARCompact specific pass to generate conditional execution instructions.
 Due to delay slot scheduling and interactions between operand numbers,
 literal sizes, instruction lengths, and the support for conditional exection,
 the target-independent pass to generate conditional execution is often lacking,
-so the ARC port has kept a sepcial pass around that tries to find more
+so the ARC port has kept a special pass around that tries to find more
 conditional execution generating opportunities after register allocation,
 branch shortening, and delay slot scheduling have been done.  This pass
 generally, but not always, improves performace and code size, at the cost of
@@ -11659,11 +11631,10 @@ the case.
 
 @item -mlra
 @opindex mlra
-Enable Local Register Allocation.  This is still unproven for ARC, so
-by default we use standard reload (i.e. @samp{-mno-lra}). There are
-some additional options to control how LRA works:
+Enable Local Register Allocation.  This is still experimental for ARC,
+so by default the compiler uses standard reload
+(i.e. @samp{-mno-lra}).
 
-@table @samp
 @item -mlra-priority-none
 @opindex mlra-priority-none
 Don't indicate any priority for target registers.
@@ -11672,11 +11643,9 @@ Don't indicate any priority for target registers.
 @opindex mlra-priority-compact
 Indicate target regsiter priority for r0..r3 / r12..r15.
 
-@item mlra-priority-noncompact
+@item -mlra-priority-noncompact
 @opindex mlra-priority-noncompact
 Reduce target register priority for r0..r3 / r12..r15.
-
-@end table
 
 @item -mno-millicode
 @opindex mno-millicode
@@ -11735,24 +11704,24 @@ by @option{-mcpu=}.
 Supported values for @var{cpu} are
 
 @table @samp
-@item arc600
+@item ARC600
 Tune for ARC600 cpu.
 
-@item arc601
+@item ARC601
 Tune for ARC601 cpu.
 
-@item arc700
+@item ARC700
 Tune for ARC700 R4.2 Cpu with standard multiplier block.
 
-@item arc700-xmac
+@item ARC700-xmac
 @item ARC725D
 @item ARC750D
 Tune for ARC700 R4.2 Cpu with XMAC block.
 
 @end table
 
-@item -multcost=@var{num}
-@opindex multcost
+@item -mmultcost=@var{num}
+@opindex mmultcost
 Cost to assume for a multiply instruction, with @samp{4} being equal to a
 normal instruction.
 
@@ -11773,6 +11742,28 @@ are now deprecated and will be removed in a future release:
 @c Deprecated options
 @table @gcctabopt
 
+@item -margonaut
+@opindex margonaut
+Obsolete FPX.
+
+@item -mbig-endian
+@opindex mbig-endian
+@itemx -EB
+@opindex EB
+Compile code for big endian targets.  Use of these options is now
+deprecated.  Users wanting big-endian code, should use the
+@emph{arceb-} targets when building the tool chain, for which
+big-endian is the default.
+
+@item -mlittle-endian
+@opindex mlittle-endian
+@itemx -EL
+@opindex EL
+Compile code for little endian targets.  Use of these options is now
+deprecated.  Users wanting little-endian code should use the
+@emph{arc-} targets when building the tool chain, for which
+little-endian is the default.
+
 @item -mbarrel_shifter
 @opindex mbarrel_shifter
 Replaced by @samp{-mbarrel-shifter}
@@ -11789,6 +11780,10 @@ Replaced by @samp{-mdpfp-fast}
 @opindex mdsp_packa
 Replaced by @samp{-mdsp-packa}
 
+@item -mEA
+@opindex mEA
+Replaced by @samp{-mea}
+
 @item -mmac_24
 @opindex mmac_24
 Replaced by @samp{-mmac-24}
@@ -11804,6 +11799,16 @@ Replaced by @samp{-mspfp-compact}
 @item -mspfp_fast
 @opindex mspfp_fast
 Replaced by @samp{-mspfp-fast}
+
+@item -mtune=@var{cpu}
+@opindex mtune
+Values @samp{arc600}, @samp{arc601}, @samp{arc700} and
+@samp{arc700-xmac} for @var{cpu} are replaced by @samp{ARC600},
+@samp{ARC601}, @samp{ARC700} and @samp{ARC700-xmac} respectively
+
+@item -multcost=@var{num}
+@opindex multcost
+Replaced by @samp{-mmultcost}.
 
 @end table
 
