Tidy up manual following review.
gcc:
	* doc/invoke.texi (ARC Options): Correct text for -mdsp-packa,
	-mxy and the -mtune options for ARC700, ARC700-xmac, ARC725D and
	ARC750D. Fix bad line-wrapping.  Spell check and correct this
	section.
	* doc/extend.texi (Declaring Attributes of Functions):
	Spell check and correct this section.
	(ARC Built-in Functions): Change -mEA to -mea.  Spell check and
	correct this section.

Conflicts:
	gcc/ChangeLog.ARC
	gcc/doc/extend.texi
	gcc/doc/invoke.texi

--- a/gcc/doc/extend.texi
+++ b/gcc/doc/extend.texi
@@ -9009,7 +9009,7 @@ mov  r@var{regno}, @var{val}
 @end deftypefn
 
 @deftypefn {Built-in Function} int __builtin_arc_divaw (int @var{a}, int @var{b})
-Only available if either @option{-mcpu=ARC700} or @option{-mEA} is set.
+Only available if either @option{-mcpu=ARC700} or @option{-meA} is set.
 Generates:
 @example
 divaw  @var{dest}, @var{a}, @var{b}
@@ -9184,7 +9184,7 @@ provided:
 The following is a complete list of all the SIMD built-ins provided
 for ARC, grouped by calling signature.
 
-The followign take two @code{__v8hi} arguments and return a
+The following take two @code{__v8hi} arguments and return a
 @code{__v8hi} result:
 @example
 __v8hi __builtin_arc_vaddaw (__v8hi, __v8hi)
@@ -17191,3 +17191,6 @@ implicitly scoped inside a C language scope.  Also, an empty prototype
 @code{()} is treated as an unspecified number of arguments, rather
 than no arguments, as C++ demands.
 @end table
+
+@c  LocalWords:  emph deftypefn builtin ARCv2EM SIMD builtins msimd
+@c  LocalWords:  typedef v4si v8hi DMA dma vdiwr vdowr followign
